--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@babel/core": "^7.28.4",
     "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.27.1",
-    "@testing-library/dom": "^9.3.3",
+    "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/user-event": "^14.6.1",
     "babel-jest": "^30.1.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-canvas-mock": "^2.5.2",
     "jest-environment-jsdom": "^29.7.0"
   }
 }
