--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A web application to demonstrate the double-spend problem in fractional-reserve banking",
   "main": "src/index.html",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -19,9 +22,11 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/user-event": "^14.6.1",
     "babel-jest": "^30.1.2",
+    "http-server": "^14.1.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-canvas-mock": "^2.5.2",
-    "jest-environment-jsdom": "^29.7.0"
+    "jest-environment-jsdom": "^29.7.0",
+    "vite": "^7.1.7"
   }
 }
