first ghp commit

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,8 @@ node_modules
 
 unrelated/
 
+.context/
+
 test/
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
