--- a/package.json
+++ b/package.json
@@ -1,32 +1,22 @@
 {
   "name": "double-spend-problem-simulator",
-  "version": "1.0.0",
-  "description": "A web application to demonstrate the double-spend problem in fractional-reserve banking",
-  "main": "src/index.html",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "chart.js": "^4.4.0",
-    "d3": "^7.8.5"
+    "recharts": "^3.6.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.4",
-    "@babel/preset-env": "^7.28.3",
-    "@babel/preset-react": "^7.27.1",
-    "@testing-library/dom": "^9.3.4",
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/user-event": "^14.6.1",
-    "babel-jest": "^30.1.2",
-    "http-server": "^14.1.1",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-canvas-mock": "^2.5.2",
-    "jest-environment-jsdom": "^29.7.0",
-    "vite": "^7.1.7"
+    "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0"
   }
 }
